[tool.poetry]
name = "wikilinker"
version = "0.1.0"
description = ""
authors = ["Sebastian Schramm <schrammsm@gmail.com>"]
readme = "chainlit.md"

[tool.poetry.dependencies]
python = "^3.11"
chainlit = "^0.6.402"
transformers = "^4.33.1"
auto-gptq = "^0.4.2"
accelerate = "^0.22.0"
optimum = "^1.13.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
pytest = "^7.4.2"
flake8 = "^6.1.0"
isort = "^5.12.0"
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
"neo" = "wikilinker.cli:run"
